# pydfy

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/custom/: main.py  two_numbers.html
examples/iris/: blue.css  main.py
pydfy/: models.py  renderer.py
pydfy/template/src/: base.css  template.html
pydfy/template/src/partials/: image.html  kpi.html  number.html  pagebreak.html  paragraph.html  section.html  table.html  title.html
tests/: test_render.py
tests/stubs/: test.css
