[tool.poetry]
name = "pydfy"
version = "0.1.0"
description = "PDF reporting made easy."
authors = ["Donny Peeters <donny@bitestreams.com>", "Thijs Blom <thijs@bitestreams.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/BiteStreams/pydfy"
repository = "https://github.com/BiteStreams/pydfy"

include  = ["pydfy/**"]
exclude = [
    "**/out.pdf",
    "**/assets",
    "**/.venv",
    "**/.idea",
    "**/.pytest_cache",
    "**/.ruff_cache",
    "**/__pycache__",
    "**/.mypy_cache",
    "**/.git",
    "**/.github",
    "**/Dockerfile",
    "**/build",
    "*.iml",
    "*.swp",
    ".DS_Store",
    "Makefile",
    ".dockerignore",
    ".gitignore",
    ".pre-commit-config.yaml",
    "README.md",
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.10"
jinja2 = "^3.1.4"
selenium = "^4.18.1"
pandas = { version = "^2.0.0", optional = true}
matplotlib = { version = "^3.0.0", optional = true }
polars = {version = "^0.20.30", optional = true}

[tool.poetry.extras]
pandas = ["pandas"]
polars = ["polars"]
matplotlib = ["matplotlib"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[tool.black]
target-version = ["py310"]
line-length = 120

[tool.vulture]
min_confidence = 90
exclude = ["/tests/", "*venv*"]
paths = ["."]

[tool.ruff]
select = ["E", "F", "ERA", "W", "TID", "I", "G", "INP", "T20", "UP", "ISC", "PTH", "SIM", "PLC", "A"]
ignore = ["UP006", "UP007", "A003", "T201", "T203"]
fix = true
line-length = 120
target-version = "py310"
task-tags = ["Example", "todo", "TODO", "FIXME"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
